tests/compile/02-once-iter.stderr
error: unexpected end of input, expecting `for`
 --> $DIR/02-once-iter.rs:4:5
  |
4 |     c![n * n];
  |     ^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
