tests/compile/02-once-iter.rs
use exhaustive::c;



fn main() {
    c![n * n];
}